fix(bond): list row vertical align center

--- a/src/components/Chip/chip.scss
+++ b/src/components/Chip/chip.scss
@@ -10,6 +10,7 @@
     padding: 0;
     height: 18px;
     font-weight: 700;
+    width: fit-content;
 
     .MuiChip-label {
       padding: 0 5px;
